--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx
 #RUN rm -rf /usr/share/nginx/html/index.html
-RUN dnf install nginx -y
+RUN npm install nginx -y
 CMD ["nginx","-g","daemon off;"]
