--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx
+FROM almalinux:9
 #RUN rm -rf /usr/share/nginx/html/index.html
-RUN npm install nginx -y
+RUN dnf install nginx -y
 CMD ["nginx","-g","daemon off;"]
