--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,2 @@
-FROM almalinux:9
-#RUN rm -rf /usr/share/nginx/html/index.html
-RUN dnf install nginx -y
-CMD ["nginx","-g","daemon off;"]
+FROM nginx
+RUN rm -rf /usr/share/nginx/html/index.html
