--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,6 @@ services:
   - image: frontend:v1.0
     container_name: frontend
     depends_on:
-    - frontend
+    - backend
     ports:
     - "80:80"
