--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,18 +2,18 @@
 name: expense
 networks:
   default:
-  - name: expense
+    name: expense
 services:
   mysql:
-  - image: mysql:v1.0
+    image: mysql:v1.0
     container_name: mysql # --name mysql
   backend:
-  - image: backend:v1.0
+    image: backend:v1.0
     container_name: backend
     depends_on:
     - mysql
   frontend:
-  - image: frontend:v1.0
+    image: frontend:v1.0
     container_name: frontend
     depends_on:
     - backend
