--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
   backend:
     image: backend:v1.0
     container_name: backend
+    command: sh -c "sleep 20 && /opt/server/index.js"
     depends_on:
     - mysql
   frontend:
