--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:20.15.1-alpine3.19 
 EXPOSE 8080
 ENV DB_HOST=mysql
-RUN useradd expense
+RUN RUN addgroup -S expense && adduser -S expense -G expense
 RUN mkdir /opt/server
 RUN chown expense:expense -R /opt/server
 WORKDIR /opt/server
