--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
       target: /var/lib/mysql
       type: volume # -v volume-name: /path/in/container
   backend:
-    image: backend:v1.0
+    image: backend:1.0
     container_name: backend
     command: sh -c "sleep 20 && node /opt/server/index.js"
     depends_on:
